<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddItemActivity"
    android:id="@+id/layout">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/title"
            android:text="@string/add_item"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/label"
            android:text="@string/photo"/>
        <ImageView
            android:id="@+id/picture"
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:scaleType="fitXY"
            android:visibility="gone"
            android:layout_gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/take_picture"
                android:id="@+id/take_picture"
                android:layout_weight="1"
                android:layout_margin="5dp"/>
            <Button
                android:id="@+id/select_picture"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_picture"
                android:layout_weight="1"
                android:layout_margin="5dp"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/label"
            android:text="@string/name"/>
        <EditText
            android:id="@+id/name"
            android:hint="@string/name_hint"
            android:inputType="text"
            style="@style/field"
            android:layout_gravity="left"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/label"
            android:text="@string/category"/>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/category"
                android:hint="@string/category_hint"
                android:layout_gravity="left"
                android:inputType="text"
                style="@style/field"
                android:layout_width="200dp"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/wizard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wizard"
                android:layout_toEndOf="@+id/category"/>
            </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/label"
            android:text="@string/price"/>
        <EditText
            android:id="@+id/price"
            android:hint="@string/price_hint"
            android:layout_gravity="left"
            android:inputType="numberDecimal"
            style="@style/field"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/label"
            android:text="@string/description"/>
        <EditText
            android:id="@+id/desc"
            android:hint="@string/description_hint"
            style="@style/field"
            android:layout_gravity="left"
            android:gravity="left"
            android:inputType="textCapSentences|textMultiLine"
            android:maxLines="6"
            android:lines="6"
            android:layout_width="250dp"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            style="@style/confirm_button"
            android:layout_gravity="center"
            android:layout_margin="10dp"/>
    </LinearLayout>
</ScrollView>