<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddItemActivity"
    android:id="@+id/layout">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/title"
            android:text="@string/item"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/label"
            android:text="@string/photo"/>
        <ImageView
            android:id="@+id/picture"
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:scaleType="fitXY"
            android:visibility="gone"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/label"
            android:text="@string/name"/>
        <TextView
            android:id="@+id/name"
            android:layout_gravity="left"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/label"
            android:text="@string/category"/>
        <TextView
            android:id="@+id/category"
            android:layout_gravity="left"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/label"
            android:text="@string/price"/>
        <TextView
            android:id="@+id/price"
            android:layout_gravity="left"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/label"
            android:text="@string/infos"/>
        <TextView
            android:id="@+id/infos"
            android:layout_gravity="left"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:visibility="gone"
            android:id="@+id/not_my_item_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/label"
                android:text="@string/distance"/>
            <TextView
                android:id="@+id/distance"
                android:layout_gravity="left"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/label"
                android:text="@string/pseudo"/>
            <TextView
                android:id="@+id/pseudo"
                android:layout_gravity="left"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/label"
                android:text="@string/contact"/>
            <TextView
                android:id="@+id/contact"
                android:layout_gravity="left"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/add_wishlist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wishlist_add"
                style="@style/confirm_button"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:visibility="gone"/>
        </LinearLayout>
        <Button
            android:id="@+id/remove_wishlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wishlist_remove"
            style="@style/red_button"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:visibility="gone"/>
        <Button
            android:id="@+id/delete_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_item"
            style="@style/red_button"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:visibility="gone"/>
    </LinearLayout>
</ScrollView>