<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:text="@string/login"
        style="@style/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/username_login"
        android:hint="@string/un_hint"
        android:inputType="text"
        style="@style/field"
        android:layout_width="200dp"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/password_login"
        android:hint="@string/pw_hint"
        android:inputType="textPassword"
        style="@style/field"
        android:layout_width="200dp"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            android:id="@+id/log_in_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/log_in_btn"
            style="@style/confirm_button"/>

        <Button
            android:id="@+id/sign_up_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@+id/log_in_btn"
            android:text="@string/sign_up_btn" />

    </RelativeLayout>

</LinearLayout>